<resources>
    <string name="app_name">Notula</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="delete_notula">Notula berhasil dihapus</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="title_activity_detail_meetings2">DetailMeetingsActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meetings">Meetings</string>
    <string name="notula">Notula</string>
    <string name="add_attendances">Add Attendances</string>
    <string name="required">Required</string>
    <string name="add_new">Add new..</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="attendances">Attendances</string>
    <string name="edit_attendances">Edit Attendances</string>
    <string name="update">Update..</string>
    <string name="update_successfully">Updated Successfully</string>
    <string name="add_meetings">Add Meetings</string>
    <string name="meeting_detail">Meetings Detail</string>
    <string name="edit_meetings">Edit Meetings</string>
    <string name="maximum_character">Maximum 200 character</string>
    <string name="add_notula">Add Notula</string>
    <string name="notula_detail">Notula Detail</string>
    <string name="edit_notula">Edit Notula</string>
    <string name="sign_in_load">Sign in ..</string>
    <string name="sign_in_successfully">Sign in Successfully</string>
    <string name="incorrect">Username or Password incorrect</string>
    <string name="bad_connection">"Bad connection "</string>
    <string name="required_password_characters">Required at least 8 characters</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="sign_up_load">Sign Up..</string>
    <string name="sign_up_successfully">Sign Up Successfully</string>
    <string name="sign_up_failed">Registration Failed</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End Time</string>
    <string name="name">Name</string>
    <string name="oops_timeout">Oops. Timeout error!</string>
    <string name="timeout_error">Timeout error!</string>
    <string name="position">Position</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="agenda">Agenda</string>
    <string name="status">Status</string>
    <string name="confirm">Confirm</string>
    <string name="delete_dialog">Are you sure, want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="delete_successfully">Delete Successfully</string>
    <string name="location">Location</string>
    <string name="upcoming">Upcoming</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="select_status">Select Status</string>
    <string name="photos">Photos</string>
    <string name="save_load">Save..</string>
    <string name="points">Points</string>
    <string name="follow_up">Folow Up</string>
    <string name="due_date">Due Date</string>
    <string name="pic">PIC</string>
    <string name="follow_up_detail">Follow Up Detail</string>
    <string name="forgot_password_">forgot password ?</string>
    <string name="account_information">Account Information</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_password">Change Password</string>
    <string name="want_to_logout">Do you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="change_successfully">Change Password Successfully</string>
    <string name="upload_successfully">Upload Successfully</string>
    <string name="title">Title</string>
    <string name="rename_photo">Rename Photo</string>
    <string name="upcoming_meeting">Upcoming Meeting</string>
    <string name="latest_notula">Latest Notula</string>
    <string name="next_meetings">Next Meetings</string>
    <string name="add_to_event_calender">Add to event Calender</string>
    <string name="send_schedule_to_email">Send Schedule to email</string>
    <string name="preview">Preview</string>
    <string name="data_is_empty">Data is empty</string>
    <string name="meeting_today">Meetings Today</string>
    <string name="summary">Summary</string>
    <string name="max_1500">maximum character 1500</string>
    <string name="no_meeting_today">No Meeting Today</string>
    <string name="notes">Notes</string>
    <string name="note">Note</string>
    <string name="add_note">Add Notes</string>
    <string name="detail_note">Detail Note</string>
    <string name="add_follow_up">Add Follow Up</string>
    <string name="detail_follow_up">Detail Follow Up</string>
    <string name="edit_follow_up">Edit Follow Up</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_point">Add Point</string>
    <string name="edit_point">Edit Point</string>
    <string name="required_meeting">Required. Please create meeting before create a notula</string>
    <string name="report">Report</string>
    <string name="detail_report">Detail Report</string>
    <string name="organization_address">Organization Address</string>
    <string name="your_organization">Your Organization</string>
    <string name="owned_by_someone">Your email already ,owned by someone</string>


    <string-array name="meetings_status">
        <item>Upcoming</item>
        <item>Pending</item>
        <item>Cancel</item>
        <item>Done</item>
    </string-array>
</resources>