<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".activities.attendances.AddAttendancesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <!--        <TextView-->
        <!--            android:id="@+id/titleFragment"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:textColor="@color/colorPrimary"-->
        <!--            android:text="@string/account_information" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            app:boxStrokeColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilName"
            android:layout_marginBottom="20dp"
            app:boxStrokeColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/position"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/tilEmail"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="17sp" />




    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>