<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".activities.notulas.AddNotulasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
            android:id="@+id/tilTitle"
            android:layout_marginBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterOverflowTextAppearance="@style/CounterOverFlow"
            app:counterTextAppearance="@style/CounterText"
            app:counterTextColor="@color/colorBlack"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                 android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNote"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="55dp"
            app:boxStrokeColor="@color/colorAccent"
            app:counterEnabled="false"
            app:counterTextAppearance="@style/CounterText"
            app:counterTextColor="@color/colorBlack"
            app:hintTextAppearance="@style/HintText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:gravity="top"
                android:hint="@string/note"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>





    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layoutBtnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:gravity="right">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/round"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="17dp"
            android:layout_below="@+id/tilMeetingsTitle"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>



</RelativeLayout>
