<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".activities.meetings.AddMeetingsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/CounterText"
                app:counterTextColor="@color/colorBlack"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/meetings"

                     android:inputType="text"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_below="@id/tilDate"
                android:id="@+id/ConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/left_guideline"
                    app:layout_constraintGuide_percent=".0"
                    android:orientation="vertical"/>

                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/center_guideline"
                    app:layout_constraintGuide_percent=".5"
                    android:orientation="vertical"/>
                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/right_guideline"
                    app:layout_constraintGuide_percent="1"
                    android:orientation="vertical"/>

                <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
                    android:id="@+id/tilStartTime"
                    android:layout_width="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
                    app:layout_constraintRight_toRightOf="@+id/center_guideline"
                    tools:ignore="MissingConstraints"
                    app:counterTextAppearance="@style/CounterText"
                    app:hintTextAppearance="@style/HintText"
                    app:counterTextColor="@color/colorBlack"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tieStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"

                        android:drawableRight="@drawable/ic_baseline_access_time_24"
                        android:focusable="false"
                        android:hint="@string/start_time"
                        android:inputType="time"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"

                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toLeftOf="@+id/center_guideline"
                    app:layout_constraintRight_toRightOf="@+id/right_guideline"
                    tools:ignore="MissingConstraints"
                    app:counterTextAppearance="@style/CounterText"
                    app:hintTextAppearance="@style/HintText"
                    app:counterTextColor="@color/colorBlack"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableRight="@drawable/ic_baseline_access_time_24"
                        android:focusable="false"

                        android:padding="10dp"
                        android:inputType="time"
                        android:textColor="@color/colorBlack"
                        android:id="@+id/tieEndTime"
                        android:hint="@string/end_time"

                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
                android:id="@+id/tilAgenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ConstraintLayout"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="10dp"
                app:counterTextAppearance="@style/CounterText"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:counterTextColor="@color/colorBlack"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAgenda"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/agenda"

                    android:padding="10dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilAgenda"
                android:layout_marginBottom="6dp"
                app:counterTextAppearance="@style/CounterText"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:counterTextColor="@color/colorBlack"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieLocation"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top"
                    android:hint="@string/location"

                    android:padding="10dp"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorAccent"
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tilTitle"
                android:layout_marginBottom="6dp"
                app:counterTextAppearance="@style/CounterText"
                app:counterTextColor="@color/colorBlack"
                app:hintTextAppearance="@style/HintText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_date_range_24"
                    android:hint="@string/date"

                    android:padding="10dp"
                    android:focusable="false"
                    android:inputType="date"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_below="@+id/tilLocation"
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/round"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#FFF"
                tools:ignore="MissingConstraints" />


        </RelativeLayout>
    </ScrollView>

</LinearLayout>
